--- a/task/templates/task_item.html
+++ b/task/templates/task_item.html
@@ -45,7 +45,7 @@
         </form>
       </td>
     </tr>
-    {% else %}
+    {% elif cookie == items[3] %}
     <tr>
       <th scope="row">Actions</th>
       <td>
