--- a/task/templates/login.html
+++ b/task/templates/login.html
@@ -9,7 +9,7 @@ Login
     <div class="container">
         <form method="POST" class="form-register" action="/login" style="color:black">
             <br>
-            <img class="mb-4" src="static/satellit.png" alt="" style="width:200px;">
+            <img class="mb-4" src="static/Panda.png" alt="" style="width:200px;">
             <br>
             <h1 class="h3 mb-3 font-weight-normal">
                 Please Login
