--- a/task/templates/register.html
+++ b/task/templates/register.html
@@ -10,7 +10,7 @@ Register
 <form method="POST" class="form-register" action="/register" style="color:black">
 
     <br>
-    <img class="mb-4" src="static/satellit.png" alt="" style="width:200px;">
+    <img class="mb-4" src="static/Panda.png" alt="" style="width:200px;">
     <br>
     <h1 class="h3 mb-3 font-weight-normal">
         Please Register
