--- a/task/templates/task_delete_confirmation.html
+++ b/task/templates/task_delete_confirmation.html
@@ -9,7 +9,7 @@
     <p>Are you sure you want to delete this task?</p>
     <form method="POST" action="/task_delete/{{ task_id }}">
         <button type="submit" class="btn btn-danger">Delete Task</button>
-        <a href="{{ url_for('task_item', task_id=task_id) }}" class="btn btn-secondary">Cancel</a>
+        <a href="/task_item/{{ task_id }}" class="btn btn-secondary">Cancel</a>
     </form>
 </div>
 {% endblock %}
