--- a/task/templates/dashboard.html
+++ b/task/templates/dashboard.html
@@ -43,6 +43,6 @@ Dashboard
     
       </tbody>
         </table>
-    <p><a href="/">Logout</a> <a href="/task_creation" style="padding-left: 61%;"><buttontype="button" class="btn btn-dark">Create Task</button></a></p>
+    <p><a href="/logout">Logout</a> <a href="/task_creation" style="padding-left: 61%;"><buttontype="button" class="btn btn-dark">Create Task</button></a></p>
 </body>
 {% endblock %}
